Added Rock History Quiz to portfolio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                     <div class="row flex-row justify-content-center">
                         <ul>
                             <li>HTML</li>
-                            <li>Animate.CSS</li>
                             <li>Node.js</li>
                         </ul>
                         <ul>
@@ -119,7 +118,17 @@
                     <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
                 </div>
                 <div class="row justify-content-center">
-                    <p>GitHub: <a href="https://github.com/ptj92e/To-Do-List">Work Day Scheduler</a></p>
+                    <p>GitHub: <a href="https://github.com/ptj92e/To-Do-List">Rock History Quiz</a></p>
+                </div>
+            </div>
+            <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/RockHistoryQuiz.png">
+                <h3 class="text-center">Rock History Quiz</h3>
+                <div class="row justify-content-center">
+                    <p>Deployed: <a href="https://ptj92e.github.io/Rock-History-Quiz/">Rock History Quiz</a></p>
+                </div>
+                <div class="row justify-content-center">
+                <p>GitHub: <a href="https://github.com/ptj92e/Rock-History-Quiz">Rock History Quiz</a></p>
                 </div>
             </div>
         </div>
