--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link linkText" href="#bioDiv" id="bioLink">Bio</a>
+                        <a class="nav-link linkText" href="#brandDiv" id="brandLink">Brand</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ml-2 mr-2 linkText" href="#portfolioDiv" id="portfolioLink">Portfolio</a>
@@ -43,29 +43,14 @@
         <div class="dark-cover">Welcome to my portfolio.</div>
     </div>
     <br>
-    <div class="container bioDiv" id="bioDiv">
-        <h2 class="text-center mb-3">Bio</h2>
+    <div class="container brandDiv" id="brandDiv">
+        <h2 class="text-center mb-3">Brand Statement</h2>
         <div class="row">
             <div class="col-12 border-top-secondary">
                 <div class="col-12">
                     <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage"
                         src="assets/images/Phillip_Jones.jpg">
-                    <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
-                        stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web
-                        development
-                        has come from over a decade of music education where I learned a strong work ethic and creative
-                        problem
-                        solving. My motivation to code comes from a strong desire for learning and the daily
-                        opportunities I
-                        will be presented with to grow.<br><br>
-                        Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State
-                        University as
-                        a
-                        Music Education Major and I am currently in my second full year as a Band Director. I am married
-                        to
-                        a wonderful wife who has supported me every step of this journey where I have discovered a
-                        strong,
-                        new passion.</p>
+                    <p class="brandText">Full-Stack Web Developer utilizing a background in music education to provide a more well rounded addition to any team. Currently working on a certificate for Full Stack Web Development from the Vanderbilt University Coding Bootcamp with skills in HTML, CSS, JavaScript, JQuery, Node.js, and responsive web design. Known as a patient problem-solver passionate about a responsive user experience, and clear team communication. With a focus on user interface, I recently worked with a team of 3 to finish a job search website that is mobile responsive and pulls information from multiple APIs to present the user with jobs, a map of the city where the job is located, and quality of life information for the city that is searched. Motivated to utilize skills in the future as a part of a cohesive working unit developing quality websites and apps focused on user experience.</p>
                 </div>
                 <div class="col-12">
                     <h4 class="text-center">Skills Include</h4>
