--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css?family=Suravaram&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>PJ Design</title>
@@ -50,7 +52,16 @@
                 <div class="col-12">
                     <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage"
                         src="assets/images/Phillip_Jones.jpg">
-                    <p class="brandText">Full-Stack Web Developer utilizing a background in music education to provide a more well rounded addition to any team. Currently working on a certificate for Full Stack Web Development from the Vanderbilt University Coding Bootcamp with skills in HTML, CSS, JavaScript, JQuery, Node.js, and responsive web design. Known as a patient problem-solver passionate about a responsive user experience, and clear team communication. With a focus on user interface, I recently worked with a team of 3 to finish a job search website that is mobile responsive and pulls information from multiple APIs to present the user with jobs, a map of the city where the job is located, and quality of life information for the city that is searched. Motivated to utilize skills in the future as a part of a cohesive working unit developing quality websites and apps focused on user experience.</p>
+                    <p class="brandText">Full-Stack Web Developer utilizing a background in music education to provide a
+                        more well rounded addition to any team. Currently working on a certificate for Full Stack Web
+                        Development from the Vanderbilt University Coding Bootcamp with skills in HTML, CSS, JavaScript,
+                        JQuery, Node.js, and responsive web design. Known as a patient problem-solver passionate about a
+                        responsive user experience, and clear team communication. With a focus on user interface, I
+                        recently worked with a team of 3 to finish a job search website that is mobile responsive and
+                        pulls information from multiple APIs to present the user with jobs, a map of the city where the
+                        job is located, and quality of life information for the city that is searched. Motivated to
+                        utilize skills in the future as a part of a cohesive working unit developing quality websites
+                        and apps focused on user experience.</p>
                 </div>
                 <div class="col-12">
                     <h4 class="text-center">Skills Include</h4>
@@ -75,7 +86,7 @@
     <br>
     <div class="container portfolioDiv" id="portfolioDiv">
         <h2 class="text-center mb-3">Portfolio</h2>
-        <div class="row justify-content-center">
+        <div class="js-flickity" data-flickity='{"wrapAround" : "true", "groupCells" : "true"}'>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
                 <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
                 <h3 class="text-center">Got Jobs?</h3>
@@ -113,7 +124,17 @@
                     <p>Deployed: <a href="https://ptj92e.github.io/Rock-History-Quiz/">Rock History Quiz</a></p>
                 </div>
                 <div class="row justify-content-center">
-                <p>GitHub: <a href="https://github.com/ptj92e/Rock-History-Quiz">Rock History Quiz</a></p>
+                    <p>GitHub: <a href="https://github.com/ptj92e/Rock-History-Quiz">Rock History Quiz</a></p>
+                </div>
+            </div>
+            <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Profile_Generator.png">
+                <h3 class="text-center">Profile Generator</h3>
+                <div class="row justify-content-center">
+                        <p>Please visit GitHub to see application.</p>
+                    </div>
+                <div class="row justify-content-center">
+                    <p>GitHub: <a href="https://github.com/ptj92e/Profile-Generator">Profile Generator</a></p>
                 </div>
             </div>
         </div>
@@ -158,6 +179,7 @@
         </div>
     </div>
     <script src="script.js" type="text/javascript"></script>
+
 </body>
 
 </html>
