--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg animated fadeInUp">
-            <img class="navbar-brand p-0 m-0" src="assets/images/logo.png" href="#welcome">
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -86,6 +85,7 @@
     <br>
     <div class="container portfolioDiv" id="portfolioDiv">
         <h2 class="text-center mb-3">Portfolio</h2>
+        <p class="portfolioText">Here are some of the projects I have worked on. So far, on the front end, the projects utilize HTML, CSS, Bootstrap, JavaScript, JQuery, and making API calls. On the back end, I have only used Node.js and Express in some projects and that will change in the very near future.</p>
         <div class="js-flickity" data-flickity='{"wrapAround" : "true", "groupCells" : "true"}'>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
                 <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
-                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Profile_Generator.png">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Profile-Generator.png">
                 <h3 class="text-center">Profile Generator</h3>
                 <div class="row justify-content-center">
                         <p>Please visit GitHub to see application.</p>
@@ -179,7 +179,6 @@
         </div>
     </div>
     <script src="script.js" type="text/javascript"></script>
-
 </body>
 
 </html>
