--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
     </header>
     <br>
     <div class="container pl-0 pr-0 welcomeDiv animated fadeInUp" id="welcome">
-        <div class="dark-cover">My name is</div>
+        <div class="dark-cover">Welcome to the portfolio of </div>
         <div class="dark-cover-name">Phillip Jones</div>
-        <div class="dark-cover">I am a full stack web developer.</div>
-        <div class="dark-cover">Welcome to my portfolio.</div>
+        <div class="dark-cover">Full Stack Web Developer</div>
     </div>
     <br>
     <div class="container brandDiv" id="brandDiv">
@@ -85,7 +84,7 @@
     <br>
     <div class="container portfolioDiv" id="portfolioDiv">
         <h2 class="text-center mb-3">Portfolio</h2>
-        <p class="portfolioText">Here are some of the projects I have worked on. So far, on the front end, the projects utilize HTML, CSS, Bootstrap, JavaScript, JQuery, and making API calls. On the back end, I have only used Node.js and Express in some projects and that will change in the very near future.</p>
+        <p class="portfolioText">Here are some of the projects I have worked on. So far, on the front end, the projects utilize HTML, CSS, Bootstrap, JavaScript, JQuery, and making API calls. On the back end, I have only used Node.js and Express in some projects, and I have goals to add more languages in the future.</p>
         <div class="js-flickity" data-flickity='{"wrapAround" : "true", "groupCells" : "true"}'>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
                 <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
@@ -146,6 +145,9 @@
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/document.png">
                 <h3 class="text-center">Resume</h3>
+                <div class="row justify-content-center">
+                    <h5>Follow the link below to see my resume.</h5>
+                </div>
                 <div class="row justify-content-center">
                     <a href="https://drive.google.com/open?id=1z1m5S2SvSmr-MA4fokCtE1jq5RufpZoc">Professional Resume</a>
                 </div>
