Updated portfolio information

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
                     <h3 class="text-center">Got Jobs?</h3>
+                    <p class="portfolioText">This is a webpage that I created with a team of 2 others. We used Bootstrap as our visual framework and features a fully responsive design. We modified it with our own class system for the styling. For the functionality, we used JQuery as well as a few API calls to retrieve information. We used The Muse, Teleport, and the Mapquest APIs for this app. We also used the third party API Plotly.js to create the table for the Teleport information.</p>
                     <div class="row justify-content-center">
                         <p>Deployed: <a href="https://ptj92e.github.io/GotJobs/">Got Jobs?</a></p>
                     </div>
@@ -170,6 +171,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Weather.png">
                     <h3 class="text-center">Weather Dashboard</h3>
+                    <p class="portfolioText">I created this app as part of an assignment in my bootcamp. This app utilizes Bootstrap for a fully responsive mobile experience. For functionality, I used JQuery to send information to the Openweather API. The user can search for a city and the page will populate with current weather information and a 5 day forecast. When the page loads, the app will also use the user's geolocation to pull up weather information for where the user is located.</p>
                     <div class="row justify-content-center">
                         <p>Deployed: <a href="https://ptj92e.github.io/Weather-Dashboard/">Weather Dashboard</a></p>
                     </div>
@@ -190,6 +192,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Work.png">
                     <h3 class="text-center">Work Day Scheduler</h3>
+                    <p class="portfolioText">This app I created is great for keeping up with tasks during the workday. This app uses the third party API Moment.js to keep track of the time of day. The color of the time block changes throughout the day depending on the time provided by the Moment.js API. Once the user inputs a task for a certain time of day, they can click on the save button and save their task to the local storage and can be accessed even when the page is reloaded.</p>
                     <div class="row justify-content-center">
                         <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
                     </div>
@@ -210,6 +213,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/RockHistoryQuiz.png">
                     <h3 class="text-center">Rock History Quiz</h3>
+                    <p class="portfolioText">I created a quiz that uses JQuery for the functionality. Once the quiz button is clicked, the program hides elements and populates the first question and answer choices on the screen. Each answer choice is associated with a data attribute that, when clicked, is checked against the correct answer. If the correct answer is clicked, the user's score goes up and the next question fills the space. If not, there is a time penalty and the question still changes. Once the quiz is over, the user inputs their name and is redirected to a score page which displays the user's score.</p>
                     <div class="row justify-content-center">
                         <p>Deployed: <a href="https://ptj92e.github.io/Rock-History-Quiz/">Rock History Quiz</a></p>
                     </div>
@@ -230,6 +234,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Profile-Generator.png">
                     <h3 class="text-center">Profile Generator</h3>
+                    <p class="portfolioText">This is a Node application that I created that uses Inquirer to prompt the user for their GitHub username and favorite color. Once those two answers are given, a PDF of information from GitHub is created and can be used as a quick resume reference.</p>
                     <div class="row justify-content-center">
                         <p>Please visit GitHub to see application.</p>
                     </div>
