Added new portfolio item

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                         <ul>
                             <li>HTML</li>
                             <li>Node.js</li>
+                            <li>Express</li>
                         </ul>
                         <ul>
                             <li>CSS</li>
                             <li>JavaScript</li>
+                            <li>MySQL</li>
                         </ul>
                         <ul>
                             <li>Bootstrap</li>
@@ -130,6 +132,14 @@
                 <h3 class="text-center">Profile Generator</h3>
                 <div class="row justify-content-center pb-3">
                     <button type="button" class="btn btn-light" data-toggle="modal" data-target="#profileModal">See
+                        More</button>
+                </div>
+            </div>
+            <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Template_Engine.png">
+                <h3 class="text-center">Template Engine</h3>
+                <div class="row justify-content-center pb-3">
+                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#templateModal">See
                         More</button>
                 </div>
             </div>
@@ -261,6 +271,31 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="templateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="modal-body">
+                    <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Template_Engine.png">
+                    <h3 class="text-center">Template Engine</h3>
+                    <p class="portfolioText">This is a Node application that I created that uses Inquirer to prompt
+                        the
+                        user for their GitHub username and favorite color. Once those two answers are given, a PDF
+                        of
+                        information from GitHub is created and can be used as a quick resume reference.</p>
+                    <div class="row justify-content-center">
+                        <p>Please visit GitHub to see application.</p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <p>GitHub: <a href="https://github.com/ptj92e/Template-Egnine">Template Engine</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <br>
     <div class="container contactDiv" id="contactDiv">
         <h2 class="text-center mb-3">Contact</h2>
@@ -272,7 +307,8 @@
                     <h5>Follow the link below to see my resume.</h5>
                 </div>
                 <div class="row justify-content-center">
-                    <a href="https://drive.google.com/open?id=1z1m5S2SvSmr-MA4fokCtE1jq5RufpZoc">Professional Resume</a>
+                    <a href="https://drive.google.com/open?id=1z1m5S2SvSmr-MA4fokCtE1jq5RufpZoc">Professional
+                        Resume</a>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
@@ -292,7 +328,8 @@
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/social-media.jpg">
                 <h3 class="text-center">Social Media</h3>
                 <div class="row justify-content-center">
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a>
+                    </p>
                 </div>
                 <div class="row justify-content-center">
                     <p>Facebook: <a href="https://www.facebook.com/TrombonePhil92">Facebook</a></p>
