Changed portfolio item description.

--- a/index.html
+++ b/index.html
@@ -281,11 +281,7 @@
                 <div class="modal-body">
                     <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Template_Engine.png">
                     <h3 class="text-center">Template Engine</h3>
-                    <p class="portfolioText">This is a Node application that I created that uses Inquirer to prompt
-                        the
-                        user for their GitHub username and favorite color. Once those two answers are given, a PDF
-                        of
-                        information from GitHub is created and can be used as a quick resume reference.</p>
+                    <p class="portfolioText">This is another Node.js app that was an exercise in creating and modifying classes. The app prompts the user to add a new employee. From there, it asks the user to input the employee's name and email. If the employee is a manager, it asks for their office number. If the employee is an engineer, it asks for their GitHub username. If the employee is an intern, it asks for which school they went to.</p>
                     <div class="row justify-content-center">
                         <p>Please visit GitHub to see application.</p>
                     </div>
