Added new portfolio item

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
                         More</button>
                 </div>
             </div>
+            <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Note-Taker.png">
+                <h3 class="text-center">Note Taker</h3>
+                <div class="row justify-content-center pb-3">
+                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#noteModal">See
+                        More</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="modal fade" id="jobsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -287,6 +295,27 @@
                     </div>
                     <div class="row justify-content-center">
                         <p>GitHub: <a href="https://github.com/ptj92e/Template-Egnine">Template Engine</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="modal-body">
+                    <img class="col-12 rounded mt-3 justify-content-center" src="assets/images/Note-Taker.png">
+                    <h3 class="text-center">Note Taker</h3>
+                    <p class="portfolioText">This app was an exercise in setting up an Express server to handle get, post, and delete requests. All of the front end of this app was provided, it was my job to create the back end. I have also deployed this application on Heroku and the link for the deployed version of this app can be found below.</p>
+                    <div class="row justify-content-center">
+                        <p>GitHub: <a href="https://github.com/ptj92e/Note-Taker">Note Taker</a></p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <p>Deployed on Heroku: <a href="https://warm-refuge-36790.herokuapp.com/">Note Taker</a></p>
                     </div>
                 </div>
             </div>
