--- a/index.html
+++ b/index.html
@@ -329,11 +329,10 @@
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/document.png">
                 <h3 class="text-center">Resume</h3>
                 <div class="row justify-content-center">
-                    <h5>Follow the link below to see my resume.</h5>
+                    <h5>Click below to view my resume.</h5>
                 </div>
                 <div class="row justify-content-center">
-                    <a href="https://drive.google.com/open?id=1z1m5S2SvSmr-MA4fokCtE1jq5RufpZoc">Professional
-                        Resume</a>
+                    <a href="https://drive.google.com/file/d/11ABXsWsTCigu1D89BkgkElwGEd8_oEO2/view?usp=sharing">Resume</a>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
