--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <h5>Click below to view my resume.</h5>
                 </div>
                 <div class="row justify-content-center">
-                    <a href="https://drive.google.com/file/d/11ABXsWsTCigu1D89BkgkElwGEd8_oEO2/view?usp=sharing">Resume</a>
+                    <a href="https://drive.google.com/open?id=1lYrXuYkk2rRmK11wNqPHL1PW0VkzvoBH">Resume</a>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
